chore: alteração no nome do projeto

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "processo-fit",
+  "name": "progresso-fit",
   "version": "1.0.0",
   "description": "Simple Page Aplication",
   "main": "src/app.js",
